service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  selector:
    app: jenkins-server
  ports:
    - name: httpport
      port: 80
      targetPort: 8080
    - name: jnlpport
      port: 50000
      targetPort: 50000
  type: ClusterIP
